--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+
+
 # C extensions
 *.so
 
@@ -11,6 +13,7 @@ __pycache__/
 build/
 develop-eggs/
 dist/
+.artifacts/
 downloads/
 eggs/
 .eggs/
