aws config added

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ __pycache__/
 build/
 develop-eggs/
 dist/
-.artifacts/
 downloads/
 eggs/
 .eggs/
@@ -146,6 +145,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+artifacts
+catboost_info
+notebook/catboost_info
 
 # Spyder project settings
 .spyderproject
